App-backend/flask-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-app
  template:
    metadata:
      labels:
        app: flask-app
    spec:
      containers:
      - name: flask-app
        image: 316336724953.dkr.ecr.us-west-2.amazonaws.com/flask-lab:latest
        ports:
        - containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
  namespace: default
spec:
  selector:
    app: flask-app
  ports:
  - port: 8080
    targetPort: 5000
  type: ClusterIP
